--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
         "firebase": "^9.6.10",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-redux": "^8.0.1",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.0",
+        "redux": "^4.2.0",
         "redux-devtools-extension": "^2.13.9",
+        "redux-logger": "^3.0.6",
         "styled-components": "^5.3.5",
         "web-vitals": "^2.1.4"
     },
