--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "redux": "^4.2.0",
         "redux-devtools-extension": "^2.13.9",
         "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
+        "reselect": "^4.1.5",
         "styled-components": "^5.3.5",
         "web-vitals": "^2.1.4"
     },
