--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.1",
+        "@types/node": "^17.0.35",
+        "@types/react": "^18.0.9",
+        "@types/react-dom": "^18.0.5",
         "dotenv": "^16.0.0",
         "firebase": "^9.6.10",
         "react": "^17.0.2",
@@ -24,6 +28,7 @@
         "reselect": "^4.1.5",
         "stripe": "^9.0.0",
         "styled-components": "^5.3.5",
+        "typescript": "^4.7.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
