--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^17.0.35",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.5",
+        "babel-plugin-macros": "^3.1.0",
         "dotenv": "^16.0.0",
         "firebase": "^9.6.10",
         "react": "^17.0.2",
@@ -28,6 +29,7 @@
         "reselect": "^4.1.5",
         "stripe": "^9.0.0",
         "styled-components": "^5.3.5",
+        "typed-redux-saga": "^1.5.0",
         "typescript": "^4.7.2",
         "web-vitals": "^2.1.4"
     },
