--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^17.0.35",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.5",
+        "@types/styled-components": "^5.1.25",
         "babel-plugin-macros": "^3.1.0",
         "dotenv": "^16.0.0",
         "firebase": "^9.6.10",
